# add

./: .dockerignore  .gitignore  ACS2.6.md  CHANGELOG.md  Cargo.toml  DESIGN.md  DEVELOPER.md  Dockerfile  FAQ.md  Makefile  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  WORKLIST.md  docker-entrypoint.sh  first_steps.md  gnoppix_vs_signal.md  howto_server.md
.add/: db_key.json  identity.json  kyber_key.json
.add/gnupg/: own_cert.asc
.github/workflows/: build-desktop.yml
bootstrap/: Cargo.toml
bootstrap/src/: main.rs
bot/: Cargo.toml  README.md  reflector_private.key  reflector_private_ml_dsa87.key
bot/src/: config.rs  main.rs
client/: Cargo.toml
client/src/: main.rs  presence.rs
crypto/: Cargo.toml
crypto-pq/: Cargo.toml
crypto-pq/examples/: gen_ml_dsa87_key.rs
crypto-pq/src/: error.rs  kem.rs  keys.rs  lib.rs  signature.rs
crypto-utils/: Cargo.toml
crypto-utils/src/: lib.rs
crypto/src/: cbnp.rs  delivery_tokens.rs  hardware_keys.rs  kyber.rs  lib.rs  pir.rs  secure_mem.rs  snapshot_defense.rs  tpm_vault.rs
debian/: .gitignore
debian/add-bootstrap/DEBIAN/: control
debian/add-bot/DEBIAN/: control
debian/add-desktop/DEBIAN/: control
debian/add-relay/DEBIAN/: control
debian/add/DEBIAN/: control
debian/eva/: control
debian/eva-bootstrap/: control
debian/eva-bot/: control
debian/eva-desktop/: control
debian/eva-relay/: control
deploy/: deploy_m1m6.sh  deploy_remote.sh
deploy/systemd/: README.md  add-bootstrap.service  add-relay.service  add-tmpfs.conf
desktop-ui/: .dockeringopre  .env  .eslintrc.js  .gitignore  .prettierrc  README.md  SECURITY_PENTEST.md  THEMES.md  TRANSLATIONS.md  electron-builder.js  electron-builder.json.bak  flatpak-manifest.json  index.html  package-lock.json  package.json  postcss.config.js  start-dev.sh  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop-ui/electron/: about.html  main.js  preload.js
desktop-ui/scripts/: gen-emoji-assets.mjs
desktop-ui/src/: App.tsx  index.css  main.tsx
desktop-ui/src/components/chat/: ChatHeader.tsx  ChatPane.tsx  EmptyState.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  index.ts
desktop-ui/src/components/common/: EmojiImg.tsx  StickerImg.tsx
desktop-ui/src/components/settings/: SecuritySettings.tsx
desktop-ui/src/components/sidebar/: ConversationList.tsx  ConversationRow.tsx  ProfileAvatar.tsx  SearchBar.tsx  Sidebar.tsx  SidebarHeader.tsx  ThemeToggle.tsx  index.ts
desktop-ui/src/components/vault/: StartupUnlockDialog.tsx  VaultUnlockDialog.tsx
desktop-ui/src/emoji/: filtered_categories.json  sticker_pack.json
desktop-ui/src/i18n/: index.ts
desktop-ui/src/lib/: attachment.ts  identicon.ts
desktop-ui/src/services/: addCLI.ts
desktop-ui/src/store/: chatStore.ts  profileStore.ts  settingsStore.ts  themeStore.ts
desktop-ui/src/types/: electron.d.ts  emoji.d.ts  index.ts
dht-core/: Cargo.toml
dht-core/src/: bootstrap_verify.rs  bot_log.rs  crypto_helpers.rs  dht_node.rs  lib.rs  pin_cache.rs  ratelimit.rs  sqlite_store.rs  types.rs  util.rs
docs/: listener-proxy.md  nginx-proxy.md  security-delivery-review.md
p2p/: Cargo.toml
p2p/src/: braid_handshake.rs  handshake.rs  lib.rs  nat.rs  peer.rs  protocol.rs  transport.rs  upnp.rs  util.rs
protocol/: Cargo.toml
protocol/src/: braid.rs  constants.rs  envelope.rs  gpg.rs  lib.rs  pow.rs
relay/: Cargo.toml
relay/src/: main.rs
scripts/: build-deb.sh  deploy.sh  deploy_nl_reflector.sh  deploy_reflector_client.sh  install-systemd.sh  release.sh  run_reflector_nl.sh  setup-bootstrap-relay-snapshot-defense.sh  setup-reflector-persistent-seed.sh  start_remote.sh  test-remote-servers.sh  verify-build.sh  verify-docs.sh  verify-relay.sh  verify-tests.sh
