[package]
name = "add-bootstrap"
version.workspace = true
edition = "2024"
description = "Add bootstrap DHT server (standalone binary)"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
base64.workspace = true
dirs.workspace = true
blake2.workspace = true

rustls = { version = "0.23", features = ["ring"] }
sequoia-openpgp.workspace = true
add-protocol = { path = "../protocol" }
add-dht-core = { path = "../dht-core" }
add-crypto = { path = "../crypto" }
ml-kem = "0.3"

[[bin]]
name = "add-bootstrap"
path = "src/main.rs"

# Debian package metadata
[package.metadata.deb]
name = "add-bootstrap"
section = "net"
priority = "optional"
maintainer = "Andreas Mueller <amu@gnoppix.com>"
depends = "libssl3"
