[package]
name = "add-crypto"
version.workspace = true
edition.workspace = true
description = "Add cryptographic primitives (AES-256-GCM encrypt/decrypt, double ratchet)"

[dependencies]
sha2.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
aes-gcm = { version = "0.10", features = ["zeroize"] }
generic-array = "0.14"
hkdf = "0.12"
ml-kem = { version = "0.3.2", features = ["getrandom"] }
libc = "0.2"
hmac.workspace = true
zeroize.workspace = true
subtle.workspace = true
blake2 = "0.10"
serde_bytes = "0.11"
argon2 = { version = "0.5", features = ["std"] }
dirs.workspace = true

add-protocol = { path = "../protocol" }

# TPM 2.0 hardware-binding (Linux/Windows with a chip). Gated so macOS /
# no-TPM builds do not pull the TSS2 stack. bindgen needs libclang; if the
# build host hides it, set LIBCLANG_PATH to the llvm lib dir.
[features]
default = []
tpm = ["dep:tss-esapi"]

[dependencies.tss-esapi]
version = "7"
optional = true
